# kdevelop

./: .gitignore  .kateconfig  Build an EXTENSION(PART).txt  ChangeLog  Doxyfile  ISSUES  Makefile.in  config.h.in  configure.in  configure.in.in  kdevelop.kdevelop  kdevelop.kdevses
buildtools/: Makefile.in
buildtools/ada/: Makefile.in
buildtools/autotools/: Makefile.am  Makefile.in  addexistingfilesdlg.cpp  autodetailsview.cpp  autodetailsview.h  autoprojectpart.cpp  autoprojectpart.h  autoprojectwidget.cpp  autoprojectwidget.h  autosubprojectview.cpp  autosubprojectview.h
buildtools/lib/: Makefile.in
buildtools/qmake/: trollprojectwidget.cpp
buildtools/script/: Makefile.in
buildtools/vstudio/: Makefile.am  Makefile.in  hierarchydlg.cpp  hierarchydlg.h  info  kdevpart_vs.desktop  kdevpart_vs.rc  kdevvstudio.rc  kdevvstudioproject.desktop  libvsslnexplorer.la  navigator.cpp  navigator.h  viewcombos.cpp  viewcombos.h  vs_common.cpp  vs_common.h  vs_dlg_addexisting_base.ui  vs_dlg_addexisting_sln.cpp  vs_dlg_addexisting_sln.h  vs_errors.h  vs_explorer.cpp  vs_explorer.h  vs_explorer_widget.ui  vs_manager_widget.ui  vs_model.cpp  vs_model.h  vs_part.cpp  vs_part.h  vs_solution.cpp  vs_view_variables.cpp  vs_view_variables.h  vslistviewitems.cpp  vslistviewitems.h  vsmanagerwidget.cpp  vsmanagerwidget.h  vsprj.h  vstudiopart.cpp  vstudiopart.h
doc/api/: FutureTasks.dox
doc/kde_app_devel/: Makefile.in
doc/kdearch/: index.cache.bz2
doc/std/: Makefile.in
doc/tools/: Makefile.in
editors/: Makefile.in
editors/editor-chooser/: Makefile.in
embedded/visualboyadvance/: Makefile.in
kdevdesigner/uilib/: Makefile.in
kdevelop/: ISSUES  Makefile.in  acinclude.m4  admin  config.h.in  configure  configure.in  configure.in.in  kdevelop.kdevelop
kdevelop/buildtools/: Makefile.am  Makefile.in
kdevelop/buildtools/vstudio/: Makefile.am  classtooldlg.h  classviewwidget.moc  digraphview.moc  hierarchydlg.cpp  hierarchydlg.moc  kdevvstudio.rc  libkdevclassview.la  navigator.moc  viewcombos.cpp  viewcombos.h  vsmanagerwidget.cpp  vsmanagerwidget.h  vsslnexplorerwidget.cpp  vsslnexplorerwidget.h  vsslnexplorerwidget.moc  vstudio.kdesktop  vstudiopart.cpp  vstudiopart.h  vstudiopart.moc
kdevelop/doc/: Makefile.in
kdevelop/embedded/: Makefile.in
kdevelop/kdevdesigner/: Makefile.in
kdevelop/languages/: Makefile.in
languages/cpp/app_templates/: Makefile.am
languages/cpp/app_templates/c_vs9hello/: Makefile.am  app.ncb  app.sln  app.vcproj  c_vs9hello.kdevelop  c_vs9hello.kdevtemplate  hello.c
languages/cpp/app_templates/chello_gba/: Makefile.in
languages/cpp/app_templates/clanlib/: Makefile.in
languages/cpp/app_templates/cmakelibcpp/: Makefile.in
languages/cpp/app_templates/cmakesimple/: Makefile.in
languages/cpp/app_templates/cmakesimplec/: Makefile.in
languages/cpp/app_templates/cppcurseshello/: Makefile.in
languages/cpp/app_templates/cpphello/: app.kdevelop
languages/cpp/app_templates/generichello/: Makefile.in
languages/cpp/app_templates/kcmodule/: Makefile.in
languages/cpp/app_templates/kconfig35/: Makefile.in
languages/cpp/app_templates/kdevpart/: Makefile.in  app.kdevelop
languages/cpp/app_templates/kdevpart2/: app.kdevelop
languages/cpp/app_templates/kmake/: Makefile.in
languages/cpp/app_templates/kmod/: Makefile.in
languages/cpp/app_templates/kpartapp/: Makefile.in
languages/cpp/app_templates/kpartplugin/: Makefile.in
languages/cpp/app_templates/kscons_kmdi/: Makefile.in
languages/cpp/app_templates/kscons_kxt/: Makefile.in
languages/cpp/app_templates/kxt/: Makefile.in
languages/cpp/app_templates/makefileempty/: Makefile.in
languages/cpp/app_templates/noatunui/: Makefile.in
languages/cpp/app_templates/noatunvisual/: Makefile.in
languages/cpp/app_templates/opieapplet/: Makefile.in
languages/cpp/app_templates/opieinput/: Makefile.in
languages/cpp/app_templates/opiemenu/: Makefile.in
languages/cpp/app_templates/opietoday/: Makefile.in
languages/cpp/app_templates/prc-tool/: Makefile.in
languages/cpp/app_templates/qmakeapp/: Makefile.in
languages/cpp/app_templates/qmakeempty/: Makefile.in
languages/cpp/app_templates/qmakesimple/: Makefile.in
languages/cpp/app_templates/vs_empty/: Makefile.am  app.kdevelop  vs_empty.kdevtemplate
languages/cpp/app_templates/win32gui/: Makefile.in
languages/cpp/app_templates/win32hello/: Makefile.in
languages/cpp/app_templates/wxhello/: Makefile.in
lib/: Makefile.in
lib/antlr/: Makefile.in
parts/: Makefile.am  Makefile.in
parts/appwizard/: Makefile.in
parts/appwizard/common/: Makefile.am
parts/appwizard/common/admin/: libtool.m4.in  ltmain.sh
parts/appwizard/licenses/: Makefile.in
parts/astyle/: Makefile.am  Makefile.in  astyle_adaptor.cpp  astyle_adaptor.h  astyle_part.cpp  astyle_part.h  astyle_widget.cpp  astyle_widget.h  astyleconfig.ui
parts/classview/: Makefile.in
parts/compilerstack/: Makefile.am  compilerstack.desktop  compilerstack.rc  part.cpp  part.h  settings_dlg.cpp  settings_dlg.h
parts/diff/: Makefile.in
parts/distpart/: Makefile.in
parts/documentation/plugins/chm/: Makefile.in
parts/documentation/plugins/custom/: Makefile.in
parts/documentation/plugins/devhelp/: Makefile.in
parts/documentation/plugins/djvu/: Makefile.in
parts/documentation/plugins/pdb/: Makefile.in
parts/documentation/plugins/pdf/: Makefile.in
parts/documentation/protocols/: Makefile.in
parts/documentation/protocols/chm/: Makefile.in
parts/fileview/: Makefile.in
parts/outputviews/: appoutputviewpart.cpp  makeitem.cpp  makeviewpart.cpp
parts/partexplorer/: Makefile.in
parts/quickopen/: Makefile.in
parts/regexptest/: Makefile.in
parts/replace/: Makefile.in
parts/snippet/: Makefile.in
parts/tipofday/: Makefile.in
parts/tools/: Makefile.in  tools_part.cpp
parts/vs/: Makefile.am  kdevpart_vs.rc  vs_model.cpp  vs_model.h  vs_part.cpp  vs_part.h  vs_solution.cpp  vs_solution.h  vstudiopart.h
pics/: Makefile.in
src/: kdeveloprc  main.cpp  partcontroller.cpp  projectmanager.cpp  projectmanager.h  simplemainwindow.cpp
templates/: cpp
(+327 files in other folders)
