# This is the collection of parts. These are derived from various
# interfaces in kdevelop/lib/interfaces which are in turn derived
# from KPart.

SUBDIRS = abbrev appwizard astyle bookmarks classview compilerstack ctags2 diff \
	distpart documentation doxygen filecreate filelist fileselector fileview filter \
	fullscreen grepview konsole openwith outputviews partexplorer quickopen regexptest \
	replace scripting snippet texttools tipofday tools uimode valgrind vcsmanager

DOXYGEN_EMPTY = YES
include ../Doxyfile.am
