SUBDIRS = automakeempty c_vs9hello chello chello_gba clanlib cmakelibc \
	cmakelibcpp cmakesimple cmakesimplec cppcurseshello cpphello cppsdlhello \
	dcopservice gtk2mmapp kapp kateplugin kateplugin2 kcmodule kconfig35 kde4app \
	kdedcop kdevlang kdevpart kdevpart2 kfileplugin khello khello2 kicker kioslave \
	kmod kofficepart konqnavpanel kpartapp kpartplugin kscons_kmdi kscons_kxt \
	kscreensaver kxt makefileempty noatunui noatunvisual opieapp opieapplet opieinput \
	opiemenu opienet opietoday qmakeapp qmakeempty qmakesimple qt4hello qt4makeapp \
	qtopia4app qtopiaapp win32gui win32hello wxhello

profilescdir = $(kde_datadir)/kdevelop/profiles/IDE/CompiledLanguageIDE/CandCppIDE/CIDE
profilesc_DATA = c.appwizard

profilescppdir = $(kde_datadir)/kdevelop/profiles/IDE/CompiledLanguageIDE/CandCppIDE/CppIDE
profilescpp_DATA = cpp.appwizard

profileskdecppdir = $(kde_datadir)/kdevelop/profiles/IDE/CompiledLanguageIDE/CandCppIDE/CppIDE/KDECppIDE
profileskdecpp_DATA = kdecpp.appwizard
